EasyHealth - fix application light box offline application alignment

--- a/src/main/webapp/resources/css/easy-health/style.scss
+++ b/src/main/webapp/resources/css/easy-health/style.scss
@@ -1280,9 +1280,9 @@ ol.lower-roman {
 
 
 /*====== Disable offline booking =====*/
-#on-of-holder{
-    margin: 0;
-    #step-online{
-        padding: 0 !important;
-    }
-}
+// #on-of-holder{
+//     margin: 0;
+//     #step-online{
+//         padding: 0 !important;
+//     }
+// }
